# Index

./: .env.example  .gitignore  CLAUDE.md  Index.code-workspace  Makefile  README.md  docker-compose.yml  env.example  main.py  package-lock.json  package.json  pyproject.toml  restart.sh
.claude/: settings.local.json
.playwright-cli/: page-2026-03-06T10-27-48-446Z.yml
apps/api/: pyproject.toml
apps/api/src/: __init__.py  config.py  database.py  logging.py
apps/api/src/api/: __init__.py  app.py  models.py
apps/api/src/api/routers/: chat.py  conversations.py  graph.py  knowledge.py  progress.py
apps/api/src/models/: __init__.py  chunk.py  conversation.py  document.py  learning_item.py
apps/api/src/providers/embedding/: __init__.py  base.py  local.py  openai.py
apps/api/src/providers/parser/: __init__.py  file_extractor.py  text.py
apps/api/src/providers/storage/: __init__.py  base.py  pgvector.py
apps/api/src/services/: __init__.py  chat.py  graph.py  knowledge.py  progress.py  search.py
apps/web/: index.html  package.json  pnpm-lock.yaml
apps/web/src/: router.tsx
apps/web/src/api/: chat.ts  graph.ts  knowledge.ts  progress.ts
apps/web/src/components/: PdfViewer.tsx
apps/web/src/components/chat/: ChatInput.tsx  MessageList.tsx  SourceList.tsx
apps/web/src/components/layout/: AppLayout.tsx  Sidebar.tsx
apps/web/src/pages/: Bookshelf.tsx  Chat.tsx  Graph.tsx  Knowledge.tsx  Progress.tsx  Reader.tsx
apps/web/src/service/: request.ts  sse.ts
apps/web/src/stores/: chat.ts  graph.ts
infra/db/: init.sql
src/: config.py
src/api/: app.py  models.py  routes.py
src/providers/: __init__.py
src/providers/embedding/: __init__.py
src/providers/parser/: base.py  markdown.py
src/providers/storage/: __init__.py  base.py  chroma.py
src/services/: __init__.py  knowledge.py  search.py
