[project]
name = "index"
version = "0.1.0"
description = "Local knowledge base with semantic search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "chromadb>=0.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "I"]
